# rust-python-comparison

./: Cargo.toml  README.md
opencv/: Untitled.ipynb
opencv/src/: main.rs
