[package]
name = "cvrust"
version = "0.1.0"
authors = ["Jose Luis Ricon <jose@ricon.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.32", default-features = false, features = ["opencv-32"]}
